--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Sebastian Calcan",
   "license": "MIT",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "express": "^4.18.2",
     "socket.io": "^4.5.4"
   },
